Update website with perfect local version

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <img src="images/profleetcare_logo.png" alt="Pro Fleet Care Simcoe County Logo">
                     </a>
                 </div>
-                <button class="nav-toggle" id="navToggle">
+                <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation menu">
                     <i class="fas fa-bars"></i>
                 </button>
                 <nav id="mainNav">
@@ -83,32 +83,23 @@
             </div>
             <div class="card-grid">
                 <div class="card">
-                    <div class="card-image">
-                        <img src="images/plow_truck_protection_areas.jpeg" alt="Mobile Rust Control">
-                    </div>
                     <div class="card-content">
                         <h3 class="card-title">Mobile Rust Control</h3>
-                        <p>We come to your location to provide exceptional rust control services for your vehicles and equipment.</p>
+                        <p>We come to your location to provide exceptional rust control services for your vehicles and equipment. Our mobile service saves you time and money.</p>
                         <a href="pages/services.html" class="cta-button">Learn More</a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-image">
-                        <img src="images/plow_truck_protection_areas.jpeg" alt="Comprehensive Protection">
-                    </div>
                     <div class="card-content">
                         <h3 class="card-title">Comprehensive Protection</h3>
-                        <p>Our unique two-step application process ensures complete protection from undercarriage to roof line.</p>
+                        <p>Our unique two-step application process ensures complete protection from undercarriage to roof line. Get long-lasting rust protection for your fleet.</p>
                         <a href="pages/process.html" class="cta-button">Learn More</a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-image">
-                        <img src="images/plow_truck_protection_areas.jpeg" alt="Industry Solutions">
-                    </div>
                     <div class="card-content">
                         <h3 class="card-title">Industry Solutions</h3>
-                        <p>Specialized rust control solutions for farm equipment, emergency vehicles, transportation, and more.</p>
+                        <p>Specialized rust control solutions for farm equipment, emergency vehicles, transportation, and more. Custom protection for your specific needs.</p>
                         <a href="pages/industries.html" class="cta-button">Learn More</a>
                     </div>
                 </div>
