--- a/pages/contact.html
+++ b/pages/contact.html
@@ -283,5 +283,7 @@
 
     <script src="../js/main.js"></script>
     <script src="../js/chatbot.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="../js/forms.js"></script>
 </body>
 </html>
