--- a/pages/faq.html
+++ b/pages/faq.html
@@ -358,6 +358,8 @@
 
     <script src="../js/main.js"></script>
     <script src="../js/chatbot.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="../js/forms.js"></script>
     <script>
         function toggleFAQ(element) {
             const answer = element.nextElementSibling;
