--- a/pages/process.html
+++ b/pages/process.html
@@ -299,5 +299,7 @@
 
     <script src="../js/main.js"></script>
     <script src="../js/chatbot.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="../js/forms.js"></script>
 </body>
 </html>
